trunk/OldArchive/fb28d8401a61ea668968d36bdd03817c-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp:1:1: error: 'ModelMeshPart' does not name a type
 ModelMeshPart Load ( string somefile ) {
 ^
main.cpp:8:2: error: 'ModelMesh' does not name a type
  ModelMesh* parentmodelmesh;
  ^
main.cpp:9:8: error: 'Matrix' does not name a type
  const Matrix* bonetransforms;
        ^
main.cpp:10:2: error: 'Matrix' does not name a type
  Matrix world;
  ^
main.cpp:11:2: error: 'ulword' does not name a type
  ulword rootbone;
  ^
main.cpp:12:2: error: 'vector' in namespace 'std' does not name a type
  std::vector<ulword> bones;
  ^
main.cpp:13:2: error: 'unordered_map' in namespace 'std' does not name a type
  std::unordered_map<String, ulword> boneindices;
  ^
main.cpp:14:2: error: 'vector' in namespace 'std' does not name a type
  std::vector<ulword> materials;
  ^
main.cpp:15:2: error: 'unordered_map' in namespace 'std' does not name a type
  std::unordered_map<String, ulword> materialindices;
  ^
main.cpp:16:2: error: 'BoundingBox' does not name a type
  BoundingBox box;
  ^
main.cpp:17:2: error: 'String' does not name a type
  String name;
  ^
main.cpp:18:2: error: 'ptr' does not name a type
  ptr<VertexBuffer> vertices;
  ^
main.cpp:19:2: error: 'ptr' does not name a type
  ptr<IndexBuffer> indices;
  ^
main.cpp:20:2: error: 'PrimitiveTopology' does not name a type
  PrimitiveTopology topology;
  ^
main.cpp:21:2: error: 'uint32' does not name a type
  uint32 vertexoffset, indexoffset, primitivecount;
  ^
main.cpp:27:1: error: expected ';' after class definition
 }
 ^
